Move authentication logic to back-end, create real request with Authentication header to verify on backend

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             <button id="SignIn" onclick="signIn()">Sign In</button>
         </div>
         <div class="rightContainer">
-            <pre id="json"></pre>
+            <pre id="auth_string"></pre>
+            <pre id="response_string"></pre>
         </div>
     </div>
-    <script src="src/index.ts">
+    <script src="src/MSAL.js">
     </script>
 </body>
 
